@@ -8,6 +8,7 @@ Log of changes:	tilp (cables, calcs, files, ticonv)
 	- fixed bug #1523480: --no-gui doesn't work
 	- fixed bug reported by "Andrew Haninger" <ahaning@gmail.com>: can't send TI85 backup
 		from command line
+	- fixed bug in the filename naming scheme
 
 - 12/07/2006, version 0.19 (0.1.3, 0.2.3, 0.2.2, 0.0.5): roms
 	- for now, use this naming scheme for TI9x var filenames: folder.var.extension
